--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         </div>
                     </div>
 
+                    <!-- Button for SearchBar -->
                     <div class="col-lg-7 col-md-7">
                         <div id="my-search-60464127"></div>
                         <div>
@@ -69,6 +70,7 @@
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
                     </div>
+                    <!-- Button for SearchBar -->
 
                     <div class="col-lg-3 text-right col-md-3">
                         <ul class="nav-right">
@@ -203,7 +205,7 @@
                         <div class="product-item">
                             <div class="pi-pic">
                                 <a href="./product.html">
-                                    <img src="img/products/women-1.jpg" alt="">
+                                    <img src="img/product-FrenchNails.jpg" alt="">
                                     <div class="sale">Sale</div>
                                 </a>
                             </div>
